--- a/gb/16/12/30/n8648311.md
+++ b/gb/16/12/30/n8648311.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/konwxp321/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/konwxp321/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/konwxp321/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/konwxp321/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/konwxp321/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/konwxp321/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/konwxp321/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/konwxp321/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2017年元旦新制 攸关台湾民众权益不可不知</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2016年12月30日讯】多项攸关台湾民众权益的新制将在106（2017）年<ahref="https://github.com/konwxp321/djy/blob/master/gb/tag/%E5%85%83%E6%97%A6.md#1">元旦</a>上路，包括基本工资调涨、<ahref="https://github.com/konwxp321/djy/blob/master/gb/tag/%E5%8A%B3%E5%9F%BA%E6%B3%95.md#1">劳基法</a>修法，与健保投保分级微调等。</p>
+	<p>【大纪元2016年12月30日讯】多项攸关台湾民众权益的新制将在106（2017）年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E6%97%A6.md#1">元旦</a>上路，包括基本工资调涨、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%B3%E5%9F%BA%E6%B3%95.md#1">劳基法</a>修法，与健保投保分级微调等。</p>
 <p><strong>劳工类</strong></p>
 <p><ahref="http://www.cna.com.tw/news/firstnews/201609195011-1.aspx" target="_blank">★基本工资时薪涨至133元</a></p>
 <p>106年1月1日起，每月基本工资将由新台币2万8元调整为2万1009元；每小时基本工资从126元调升到133元，预估162万人受益。</p>
 <p><ahref="http://www.cna.com.tw/news/firstnews/201612210204-1.aspx" target="_blank">★一例一休劳基法修法 新制陆续上路</a></p>
-<p>立法院三读修正通过<ahref="https://github.com/konwxp321/djy/blob/master/gb/tag/%E5%8A%B3%E5%9F%BA%E6%B3%95.md#1">劳基法</a>部分条文，未来劳工每7日中至少应有2日休息，1日为例假，1日为休息日，已在12月23日上路；删除7天国定假日，全国放假一致，及劳工工作满半年即有3天特休假，将从106年1月1日起实施。</p>
+<p>立法院三读修正通过<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%B3%E5%9F%BA%E6%B3%95.md#1">劳基法</a>部分条文，未来劳工每7日中至少应有2日休息，1日为例假，1日为休息日，已在12月23日上路；删除7天国定假日，全国放假一致，及劳工工作满半年即有3天特休假，将从106年1月1日起实施。</p>
 <p>注1：轮班制需间隔11小时部分，待行政院决定实施日期。<br />
 注2：公务员国定假日11天，劳工则有12天，多一天劳动节。<br />
 注3：特别休假新规定：工作满半年有3天特休，1年7天，2年10天，3年14天，5年15天，10年16天，10年以上逐年增加1天，最多30天。</p>
@@ -20,7 +20,7 @@
 <p>从106年1月1日起，劳工保险普通事故保险费率调高0.5%，保险费按被保险人当月投保薪资10.5%（含就业保险费率1%）计算，以及投保薪资分级表配合基本工资调整修正。估计雇主雇用每名劳工平均每月将增加新台币107元保费支出，受雇劳工每月平均将增加31元保费支出。</p>
 <p><strong>交通类</strong></p>
 <p><ahref="http://www.cna.com.tw/news/ahel/201609030108-1.aspx" target="_blank">★新型式机车配备昼行灯</a></p>
-<p>106年<ahref="https://github.com/konwxp321/djy/blob/master/gb/tag/%E5%85%83%E6%97%A6.md#1">元旦</a>起新型式机车应配备昼行灯，小型车和大型车配备昼行灯则分阶段在民国107年和108年上路，但已领有牌照的车辆并无要求。</p>
+<p>106年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E6%97%A6.md#1">元旦</a>起新型式机车应配备昼行灯，小型车和大型车配备昼行灯则分阶段在民国107年和108年上路，但已领有牌照的车辆并无要求。</p>
 <p><ahref="http://www.cna.com.tw/news/firstnews/201612200270-1.aspx" target="_blank">★小型车载孕妇 免高乘载管制</a></p>
 <p>106年1月1日起，乘载孕妇（含自行开车或搭乘）未满3人小型车，不受目前国道高乘载管制（小型车须乘坐至少3人）。</p>
 <p><ahref="http://www.cna.com.tw/news/ahel/201608280154-1.aspx" target="_blank">★高龄驾驶驾照换发强制施行体检与认知机能检测</a></p>
@@ -75,42 +75,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/20/n12700446.md#1">有钱判生没钱判死是真的？ 诸庆恩等4案重启调查</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/20/n12700307.md#1">违章 ／工厂害消防员殉职 民团吁落实公安3法</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12697946.md#1">贩售劣油 魏应充入监1年假释出狱</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12697949.md#1">上路一年 无人机管理机制3月将首度修订</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676272.md#1">庞氏骗局上演 台央行：当心不寻常高报酬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672882.md#1">张静案爆法界论战 检吁回归法庭攻防</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672897.md#1">涉背信捞9千万 街口董座千万交保</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670077.md#1">疫情影响 消费申诉连两年破7万件</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/konwxp321/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038882.md#1" target="_blank">严家伟：我亲历的《星星诗刊》大冤案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/20/9/29/n12439101.md#1">四岁儿子对妈妈说：我死过一次 很痛！</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/14/n12688510.md#1">古籍记载：死而复活的人讲述前后因果</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/15/8/17/n4506003.md#1">怎么对：头头是道 谁宾谁主  吃一碗各自西东</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/20/n12701423.md#1">【秦鹏直播】拜登就职 美国四大考验刚开始</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/20/n12701378.md#1">【十字路口】川普拜登交接 全球五大风险罩顶？</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12698484.md#1">【时事军事】美国海军2021装备愿望清单</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12698651.md#1">获章子怡热情颁奖 赵丽颖一动作引赞赏</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12696708.md#1">【秦鹏直播】川普特赦名单？佩洛西弹劾受挫</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12697271.md#1">萨摩耶易掉毛 女主人变废为宝做成可爱毛靴</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12698651.md#1">获章子怡热情颁奖 赵丽颖一动作引赞赏</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/18/n12696414.md#1">华为二公主姚安娜出道 网友：拿钱砸开所有门</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12698452.md#1">郑爽代孕弃养丑闻发酵 合作方纷纷解约和封杀</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/20/n12698979.md#1">郑爽代孕风波引爆舆论 杨颖等女星无辜受牵连</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/19/n12697332.md#1">唐绮阳身体出状况 感伤今年运势书将是告别作</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/18/n12695168.md#1">美国空姐告诫 在飞机上千万别用这些东西</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/18/n12695357.md#1">墨西哥女子攀爬玛雅金字塔 数百游客看傻眼</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/16/n12692356.md#1">逆转高血糖！中医3茶饮调体质 不让糖尿病上身</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/18/n12696400.md#1">专家：抗疫或已走入一个误区 人类应反省自身</a></li>
-<li><a href="https://github.com/konwxp321/djy/blob/master/gb/21/1/20/n12699617.md#1">英媒卧底调查：武汉医生被政府要求隐瞒疫情</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/konwxp321/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/konwxp321/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/30/n8648311.htm">2017年元旦新制 攸关台湾民众权益不可不知</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/30/n8648311.htm">2017年元旦新制 攸关台湾民众权益不可不知</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/konwxp321/djy/blob/master/gb/16/12/30/n8648311.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/konwxp321/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/konwxp321/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/konwxp321/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/konwxp321/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/konwxp321/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/12/30/n8648311.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
