--- a/gb/19/12/12/n11717535.md
+++ b/gb/19/12/12/n11717535.md
@@ -1,58 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mtxlr285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mtxlr285/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mtxlr285/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mtxlr285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>网住好空气  科博馆民生公共物联网特展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/99c46a4cfc855e1dcfa78f3fdee8c6b6-600x400.jpg" />
 <h6>光学式PM2.5微型感测器。  （科博馆提供）
 </h6>
 <hr>
-<p>【大纪元2019年12月12日讯】（大纪元记者赖瑞<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台中报导）台湾的<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E7%A9%BA%E6%B1%A1.md#1">空污</a>问题一向是民众关心的议题，尤其在秋冬季节，脏污的空气与灰濛濛天空，更是民众挥之不去的梦靥。为了让普罗大众了解空污资料的收集，与空品微型感测器的科学原理，<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>从即日起推出“网住好空气—民生公共<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E7%89%A9%E8%81%94%E7%BD%91.md#1">物联网</a>主题特展”，让民众知道空污真相，并提供大数据给政府，作为进行空污稽查及管制参考。展期至2020年6月7日止。</p>
-<p><ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>孙维新馆长表示，博物馆要站在科学的天平且中立的立场，照顾到各方的意见，并透过展览让民众知道事实真相并提升民众科普知识，民众看到真相后，知道该怎么做及判断。他强调，<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>这么乱的原因，就是因为很多社会问题都是科学问题，但是，政治人物不想用科学手段解决　让科学问题变成了政治问题，一辈子无解。</p>
-<p>民生公共<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E7%89%A9%E8%81%94%E7%BD%91.md#1">物联网</a>计划动小组召集人吕忠津教授表示，借用博物馆的公共性，展示物联网及大量微型感测器科技的资讯，呈现空气品质客观的事实。吕教授指出，台湾近3年来大量布建“微型感测器”，已累积六千多个，明年目标将达1万点，结合“物联网”技术，感测器每3分钟就提供1笔监测资料，可呈现污染的范围与动态变化等资料，提供政府进行稽查及管制。</p>
-<figure id="attachment_11717542" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1408633aaff7ed9189828782f42698ab.jpg"><img class="size-medium wp-image-11717542" src="https://i.epochtimes.com/assets/uploads/2019/12/1408633aaff7ed9189828782f42698ab-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">吕忠津教授表示，物联网与微型感测器可提供政府进行稽查及管制。 （科博馆提供）</figcaption></figure>
-<p>“网住好空气—民生公共物联网主题特展”展示内容包括：感测<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E7%A9%BA%E6%B1%A1.md#1">空污</a>仪器的“空品微型感测器”的科学原理及制作技术、收集的空污资料以及如何透过物联网和感测技术，进行空气污染的稽查和管制。更创造民众对外平台，增加政府与民间的互动沟通，开放民众在网站上留言与发问，展示沟通小组的专家将会回复民众提问。◇</p>
+<p>【大纪元2019年12月12日讯】（大纪元记者赖瑞<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台中报导）台湾的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A9%BA%E6%B1%A1.md#1">空污</a>问题一向是民众关心的议题，尤其在秋冬季节，脏污的空气与灰濛濛天空，更是民众挥之不去的梦靥。为了让普罗大众了解空污资料的收集，与空品微型感测器的科学原理，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>从即日起推出“网住好空气—民生公共<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%89%A9%E8%81%94%E7%BD%91.md#1">物联网</a>主题特展”，让民众知道空污真相，并提供大数据给政府，作为进行空污稽查及管制参考。展期至2020年6月7日止。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>孙维新馆长表示，博物馆要站在科学的天平且中立的立场，照顾到各方的意见，并透过展览让民众知道事实真相并提升民众科普知识，民众看到真相后，知道该怎么做及判断。他强调，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>这么乱的原因，就是因为很多社会问题都是科学问题，但是，政治人物不想用科学手段解决　让科学问题变成了政治问题，一辈子无解。</p>
+<p>民生公共<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%89%A9%E8%81%94%E7%BD%91.md#1">物联网</a>计划动小组召集人吕忠津教授表示，借用博物馆的公共性，展示物联网及大量微型感测器科技的资讯，呈现空气品质客观的事实。吕教授指出，台湾近3年来大量布建“微型感测器”，已累积六千多个，明年目标将达1万点，结合“物联网”技术，感测器每3分钟就提供1笔监测资料，可呈现污染的范围与动态变化等资料，提供政府进行稽查及管制。</p>
+<figure id="attachment_11717542" aria-describedby="caption-attachment-11717542" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/1408633aaff7ed9189828782f42698ab.jpg"><img class="size-medium wp-image-11717542" src="https://i.epochtimes.com/assets/uploads/2019/12/1408633aaff7ed9189828782f42698ab-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11717542" class="wp-caption-text">吕忠津教授表示，物联网与微型感测器可提供政府进行稽查及管制。 （科博馆提供）</figcaption></figure>
+<p>“网住好空气—民生公共物联网主题特展”展示内容包括：感测<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A9%BA%E6%B1%A1.md#1">空污</a>仪器的“空品微型感测器”的科学原理及制作技术、收集的空污资料以及如何透过物联网和感测技术，进行空气污染的稽查和管制。更创造民众对外平台，增加政府与民间的互动沟通，开放民众在网站上留言与发问，展示沟通小组的专家将会回复民众提问。◇</p>
 <p>责任编辑：尚颖</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/17/1/11/n8692755.md#1">谈岛屿浮尘  台中科博馆PM2.5视界特展</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/1/3/n10021303.md#1">PM2.5视界特展 认识空气中的隐形杀手</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/4/16/n10307883.md#1">台湾助印度解决空污问题 技转生质酒精技术</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/11/7/n10835030.md#1">空污持续肆虐  台湾中南部15测站亮红灯</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/19/1/9/n10963532.md#1">防空污 台湾大首创随身PM2.5侦测器上市</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12057746.md#1">科博馆仙履兰巡回展  冠军仙履兰快闪植物园</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12057753.md#1">中一中美术周“以艺抗疫”   讽刺中共大外宣</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12057805.md#1">率队进驻outlet美食街  阿基师拼港点外卖</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12057814.md#1">民惊恐防疫兵推  卢秀燕：非封城</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12054986.md#1">防疫停课不停学 线上阅读检测送好礼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/11/n8692755.md#1">谈岛屿浮尘  台中科博馆PM2.5视界特展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/1/3/n10021303.md#1">PM2.5视界特展 认识空气中的隐形杀手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/4/16/n10307883.md#1">台湾助印度解决空污问题 技转生质酒精技术</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/7/n10835030.md#1">空污持续肆虐  台湾中南部15测站亮红灯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/9/n10963532.md#1">防空污 台湾大首创随身PM2.5侦测器上市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678509.md#1">中部美展首奖揭晓  19岁萧辅一版画作品《缄》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678502.md#1">美国五大州农产展示会  60家厂商参展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678059.md#1">东海民调卢秀燕满意度七成 估有望争取连任</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899641.md#1" target="_blank">抗日战争期间中共做了啥？八年抗战期间中共作为大事纪要</a></li><li><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340563.md#1" target="_blank">美国务卿：对严重侵犯宗教自由者追责</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12052901.md#1">分析：金正恩残废或病故 中共恶梦将成真</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12055983.md#1">平壤封城 金与正遽然上位 朝鲜早现异动</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12054189.md#1">【翻墙必看】金正恩或脑残 令中共雪上加霜</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12053941.md#1">【拍案惊奇】骇客攻武汉病毒所 京城面临大清洗</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053085.md#1">【一线采访】习近平突访西安 到处是便衣</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12056000.md#1">王健林消失100天 负债约4千亿元</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12054555.md#1">周扬青认分手 亲揭罗志祥这些年花心不断</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053302.md#1">三月大婴儿趴睡死亡 马伊琍斥：专家是刽子手</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/21/n12050674.md#1">郎朗参加全球抗疫音乐会 国籍标注美国引热议</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053668.md#1">日子难过？ 王思聪当游戏陪练赚钱 引热议</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12051978.md#1">印度专家：5000年前文献“预言”中共病毒</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/4/n12003303.md#1">修行高人 开通阴阳两界为哪桩？</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/2/18/n3803627.md#1">米开朗基罗（5）《圣家族》</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/19/n12043816.md#1">应运出世? 华盛顿佩剑出征</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053769.md#1">【历史上的瘟疫】神农尝百草的秘密</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mtxlr285/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mtxlr285/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/12/n11717535.htm">网住好空气  科博馆民生公共物联网特展</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/12/n11717535.htm">网住好空气  科博馆民生公共物联网特展</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mtxlr285/djy/blob/master/gb/19/12/12/n11717535.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mtxlr285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mtxlr285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mtxlr285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/12/12/n11717535.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
