--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -141,7 +141,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
