--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -141,7 +141,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
